# plasma-dock

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  qml.qrc
.cache/clangd/index/: applicationmanager.cpp.0751447CD8E551C0.idx  applicationmanager.h.7E59F74B8350D874.idx  config.cpp.5C9B2E5F4D99825A.idx  config.h.3977244EBD43C53E.idx  dockwindow.cpp.43513986416247A1.idx  dockwindow.h.6CE43A31A37ADE6D.idx  main.cpp.3E9A1B8CEBD81A57.idx  windowtracker.cpp.A917661E4E006C75.idx  windowtracker.h.54427392D2AC5C29.idx
assets/: config_template.toml
qml/: DockPanel.qml  IconButton.qml  Tooltip.qml  main.qml
src/: CMakeLists.txt  applicationmanager.cpp  applicationmanager.h  config.cpp  config.h  dockwindow.cpp  dockwindow.h  main.cpp  monitor.cpp  monitor.h  tomlparser.cpp  tomlparser.h  windowtracker.cpp  windowtracker.h
